# sorta

./: .gitignore  LICENSE  README.md  pyproject.toml
sorta/: classifier.py  config_loader.py  logger.py  main.py  move.py  pdf_extract.py  pipeline.py  watcher.py
sorta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sorta/commands/: add_root.py  add_rule.py  classify.py  config.py  doctor.py  edit.py  init.py  list.py  run.py  sort.py  watch.py
sorta/templates/: config.example.toml
