[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sorta"
version = "0.1.1"
description = "A CLI tool to automatically sort PDFs and PPTX files into folders using keyword-based routing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "woterr" }
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
pdf = [
  "pypdf>=4.0.0"
]


[project.scripts]
sorta = "sorta.main:main"


[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["sorta*"]
