[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sorta"
version = "1.0.2"
description = "A CLI tool to automatically sort PDFs and PPTX files into folders using keyword-based routing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    { name = "woterr" }
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0"
]

[project.optional-dependencies]
pdf = [
    "pypdf>=4.0.0"
]

watchdog = [
    "watchdog>=6.0.0"
]


[project.scripts]
sorta = "sorta.main:main"


[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sorta*"]

[tool.setuptools.package-data]
sorta = ["templates/*.toml"]
